--- a/style.css
+++ b/style.css
@@ -1,31 +1,123 @@
-
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
-#navbari {
-    display: flex;
-    justify-content: space-between;
-    margin-right: 30px;
-    margin-top: 0px;
-    margin-left: 0px;
+.navbar{
     background-color: #0A97B0;
-    width: 100%;
+    height: 107px;
     
 }
-#telefoni {
+
+.navbar ul{
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+    display: inline-flex;
+
+}
+
+.navbar a{
+    color: black;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+
+}
+
+.navbar a:hover{
+    background-color: aqua;
+    border-radius: 15px;
+    font-size: 23;
+   transition: 1s; 
+}
+
+
+
+.top-left {
+    position: absolute;
+    top: 100px;
+    left: 20px;
+    font-size: 55px;
+    color: #0A97B0;
+    
+  }
+  #telefoni {
     align-items: center;
     height: 40px;
     width: 50px;
     margin-right: 6px;
+    margin-left: 66px;
 }
-#logo {
+#nrtel {
+    display: flex;
+    align-items: center;
+    margin-left: 200px;
+    margin-right: 340px;
+}
+#navkryesor {
+    display: flex;
+}
+#navelement{
+    display: flex;
+    margin-top: 20px;
+    margin-left: 30px;
+    
+}
+
+.fotokry {
+    display: flex;
+    
+    width: auto;
+    height: 600px;
+}
+#fotomateral1 {
+    height: 600px;
+    width: 340px;
+}
+#fotomateral2 {
+    height: 600px;
+    width: 380px;
+}
+#naltfoto {
+    height: 253.5px;
+    background-color: #0A97B0;
+    display: flex;
+}
+#tekstinalt {
+    font-weight: 650;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    padding-top: 70px;
+    padding-left: 130px;
+
+}
+#butonii {
+    display: flex;
+    justify-content: center;
+    margin-top: 110px;
+    margin-left: 170px;
+    
+}
+.styled {
+    background-color: #087C8D;
+    border: black 1px solid;
+    border-radius: 60px;
     height: 60px;
-    width: 180px;
-    margin-left: 20px;
-    margin-top:0px;
+    width: 200px;
+    justify-content: center;
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+    padding-top: 9px;
+    padding-left: 19px;
 }
-.btn btn-primar {
-    align-items: center
+#butonii a:hover{
+    
+        background-color: aqua;
+        border-radius: 15px;
+        font-size: 23;
+       transition: 1s; 
+       
     
 }
