--- a/products.css
+++ b/products.css
@@ -1,39 +1,36 @@
 body {
-    margin: 0px;
-    padding: 0px;
+    background-color: aqua;
+    font-family: Arial, sans-serif;
+    margin: 0;
 }
-.navbar{
+
+.navbar {
     background-color: #0A97B0;
     height: 107px;
-    
 }
 
-.navbar ul{
+.navbar ul {
     list-style: none;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     display: inline-flex;
-
 }
 
-.navbar a{
+.navbar a {
     color: black;
     text-decoration: none;
     padding: 15px;
     display: block;
     text-align: center;
     font-size: 20px;
-
 }
 
-.navbar a:hover{
+.navbar a:hover {
     background-color: aqua;
     border-radius: 15px;
-    font-size: 23;
-   transition: 1s; 
+    font-size: 23px;
+    transition: 1s;
 }
-
-
 
 #telefoni {
     align-items: center;
@@ -41,20 +38,87 @@ body {
     width: 50px;
     margin-right: 6px;
     margin-left: 60px;
-    
 }
+
 #nrtel {
     display: flex;
     align-items: center;
     margin-left: 200px;
     margin-right: 340px;
 }
+
 #navkryesor {
     display: flex;
 }
-#navelement{
+
+#navelement {
     display: flex;
     margin-top: 30px;
     margin-left: 110px;
-    
+}
+
+
+.background-div {
+    background-color: #0A97B0;
+    padding: 25px;
+    width: calc(100% - 50px);
+    max-width: 1200px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 50px auto; 
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+
+.product-list {
+    width: 100%;
+}
+
+.product-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #0A97B0;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+.product-image {
+    width: 80px;
+    height: 80px;
+    background-color: lightgray;
+    border-radius: 10px;
+}
+
+.product-details {
+    flex-grow: 1;
+    margin-left: 20px;
+}
+
+.show-more,
+.back-to-top {
+    background-color: aqua;
+    color: black;
+    padding: 10px 20px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.back-to-top {
+    display: none;
+}
+
+.back-to-top a:hover {
+    background-color: #0A97B0;
+    font-size: 50px;
+    border-radius: 10px;
 }
