--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     padding: 0px;
+    background-color: #0A97B0;
 }
 .navbar{
     background-color: #0A97B0;
@@ -46,8 +47,10 @@ body {
 #nrtel {
     display: flex;
     align-items: center;
-    margin-left: 200px;
-    margin-right: 340px;
+    margin-left: 100px;
+    margin-right: 200px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
 }
 #navkryesor {
     display: flex;
@@ -56,5 +59,93 @@ body {
     display: flex;
     margin-top: 30px;
     margin-left: 110px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
     
 }
+.centered {
+    position: absolute;
+    top: 42%;
+    left: 50%;
+    font-size: 39px;
+    font-family: "Gill Sans", sans-serif;
+  }
+.aboutus {
+    justify-items: center;
+    width: 500px;
+    background-color: aqua;
+    position: absolute;
+    top: 82%;
+    left: 15%;
+    text-align: center;
+    
+   
+}
+.aboutus2 {
+    justify-items: center;
+    width: 500px;
+    background-color: aqua;
+    position: absolute;
+    top: 110.499%;
+    left: 47.9%;
+    text-align: center;
+    padding: 7px;
+}
+.aboutus3 {
+    justify-items: center;
+    width: 500px;
+    background-color: aqua;
+    position: absolute;
+    top: 137.1%;
+    left: 14.08%;
+    text-align: center;
+    padding: 7px;
+}
+.aboutus4 {
+    justify-items: center;
+    width: 500px;
+    background-color: aqua;
+    position: absolute;
+    top: 163.6%;
+    left: 47.9%;
+    text-align: center;
+    padding: 7px;
+}
+.aboutus5 {
+    justify-items: center;
+    width: 500px;
+    background-color: aqua;
+    position: absolute;
+    top: 187.8%;
+    left: 14.1%;
+    text-align: center;
+    padding: 7px;
+}
+h2 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+}
+#posht {
+    width: 100%;
+    position: absolute;
+    top: 227.8%;
+     
+}
+footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 20px 0;
+        width: 1519px;
+        height: 110px;
+       
+    }
+    .footer-content h2 {
+        margin-top: 15;
+        margin-bottom: 10px;
+        font-size: 24px;
+    }
+    .footer-content p {
+        margin: 0px 0;
+        font-size: 14px;
+    }
