--- a/style.css
+++ b/style.css
@@ -47,8 +47,10 @@ body {
 #nrtel {
     display: flex;
     align-items: center;
-    margin-left: 200px;
-    margin-right: 340px;
+    margin-left: 100px;
+    margin-right: 200px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
 }
 #navkryesor {
     display: flex;
@@ -57,6 +59,8 @@ body {
     display: flex;
     margin-top: 20px;
     margin-left: 30px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
     
 }
 
