--- a/contact.css
+++ b/contact.css
@@ -2,7 +2,15 @@ body {
     margin: 0px;
     padding: 0px;
     background-color: #0A97B0;
+    overflow: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none;
+}
+
 .navbar{
     background-color: #0A97B0;
     height: 107px;
@@ -48,7 +56,7 @@ body {
     display: flex;
     align-items: center;
     margin-left: 100px;
-    margin-right: 200px;
+    margin-right: 330px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 200;
 }
