--- a/products.css
+++ b/products.css
@@ -2,7 +2,15 @@ body {
     background-color: aqua;
     font-family: Arial, sans-serif;
     margin: 0;
+    overflow: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none;
+}
+
 
 .navbar {
     background-color: #0A97B0;
@@ -44,7 +52,7 @@ body {
     display: flex;
     align-items: center;
     margin-left: 100px;
-    margin-right: 200px;
+    margin-right: 330px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 300;
 }
